--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ apply plugin: 'com.google.gms.google-services'
 //    implementation 'com.android.support.constraint:constraint-layout:+'
 //}
 
+//dependencies {
+//    implementation 'com.android.support.constraint:constraint-layout:+'
+//}
+
 
 //dependencies {
 //    implementation 'com.android.support.constraint:constraint-layout:+'
