--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StudentWallet"></activity>
+        <activity android:name=".TutorWallet"></activity>
+        <activity android:name=".StudentWallet" />
         <activity android:name=".TutorProfileToStudent" />
         <activity android:name=".CourseViewOnly" />
         <activity android:name=".ChangeAuthInfoTutor" />
